got mrgChainsF.S working successfully

--- a/p6/Makefile
+++ b/p6/Makefile
@@ -45,6 +45,12 @@ xtstSort : tstSort.o $(mrgF).S
 	$(CC) $(CCFLAGS) -o $@ tstSort.o $(mrgF).S
 xtimSort : timSort.o $(mrgF).S
 	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).S
+
+xtstSortT : tstSortC.o force_build
+	$(CC) $(CCFLAGS) -DTHUMB -o $@ tstSortC.o $(mrgF).c mrgChainsF.S
+xtimSortT : timSort.o force_build
+	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).c mrgChainsF.S
+
 #
 # This rules remove object and executables when they are no longer needed
 #
