--- a/p6/Makefile
+++ b/p6/Makefile
@@ -42,9 +42,9 @@ xtimSortC : timSort.o  force_build
 	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).c
 
 xtstSort : tstSort.o $(mrgF).S
-	$(CC) $(CCFLAGS) -o $@ tstSort.o $(mrgF).S
+	$(CC) $(CCFLAGS) -o $@ tstSort.o $(mrgF).S mrgChainsF.S mrgSortR.S
 xtimSort : timSort.o $(mrgF).S
-	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).S
+	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).S mrgChainsF.S mrgSortR.S
 
 xtstSortT : tstSortC.o force_build
 	$(CC) $(CCFLAGS) -DTHUMB -o $@ tstSortC.o $(mrgF).c $(thumbF)
