--- a/p6/Makefile
+++ b/p6/Makefile
@@ -44,7 +44,7 @@ xtimSortC : timSort.o  force_build
 xtstSort : tstSort.o $(mrgF).S
 	$(CC) $(CCFLAGS) -o $@ tstSort.o $(mrgF).S
 xtimSort : timSort.o $(mrgF).S
-	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).S mrgChainsF.S mrgSortR.S
+	$(CC) $(CCTFLAGS) -o $@ timSort.o $(mrgF).S
 
 xtstSortT : tstSortC.o force_build
 	$(CC) $(CCFLAGS) -DTHUMB -o $@ tstSortC.o $(mrgF).c $(thumbF)
